fix(Homepage): 💄 Brighten home page summary text in dark mode

--- a/assets/css/_page/_home.scss
+++ b/assets/css/_page/_home.scss
@@ -128,7 +128,7 @@
       color: $global-font-secondary-color;
 
       [theme=dark] & {
-        color: $global-font-secondary-color-dark;
+        color: #99999c;
       }
 
       h2,
