--- a/assets/css/_page/_single.scss
+++ b/assets/css/_page/_single.scss
@@ -24,7 +24,7 @@
     }
 
     [theme=dark] & {
-      color: $global-font-secondary-color-dark;
+      color: #858587;
     }
 
     @include link(false, true);
